--- a/respo/zuul-dev.properties
+++ b/respo/zuul-dev.properties
@@ -1,6 +1,6 @@
 
 server.port=8889
-# routes to serviceId
+# routes to serviceId..
 zuul.routes.api-a.path=/userapi/**
 zuul.routes.api-a.serviceId=USER
 zuul.routes.api-b.path=/addressapi/**
